# senior-project

./: .gitignore  README.md  log_cleaner.py  main.py  pyproject.toml  terminal_test.py
config/schema/: sources.schema.json
config/sources/: ssh_auth.json
configs/: ssh_auth.json
docs/: architecture.diagram  project.tree
scripts/: install.sh
src/logconsolidator/: __init__.py  main.py
src/logconsolidator/api/: server.py
src/logconsolidator/config/: __init__.py  defaults.py  loader.py  models.py
src/logconsolidator/core/: __init__.py  exceptions.py  logging.py  queues.py
src/logconsolidator/ingest/: __init__.py  reader.py  state.py  watcher.py
src/logconsolidator/output/: __init__.py  base.py  storage.py  vector.py
src/logconsolidator/process/: __init__.py  models.py  normalizer.py  parser.py
tests/: test_vector_adapter.py
